# mommy

./: Cargo.toml  README.md
assets/: affirmations.json
src/: affirmations.rs  color.rs  config.rs  main.rs  mommy.rs  utils.rs
