[package]
name = "shell-mommy"
version = "0.1.0"
authors = ["Mincy Queen <sleepymincy@proton.me>"]
edition = "2024"
description = "Affirmations in your terminal!"
license = "Unlicense license"
repository = "https://github.com/sleepymincy/mommy"

[dependencies]
fastrand = "2.3.0"
ansi_term = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
