[package]
name = "shell-mommy"
version = "0.1.4"
authors = ["Mincy Queen <sleepymincy@proton.me>"]
edition = "2024"
description = "Affirmations in your terminal!"
license = "Unlicense"
repository = "https://github.com/sleepymincy/mommy"
keywords = ["mommy", "silly", "shell", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "mommy"
path = "src/main.rs" 

[dependencies]
fastrand = "2.3.0"
ansi_term = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "3.2.0"